# cctop

./: Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: account.rs  demo.rs  main.rs  model.rs  pricing.rs  sessions.rs  snapshot.rs  theme.rs  transcripts.rs  ui.rs
